Parses final output, need to test on final robot after master-branch version succeeds

--- a/Pepper-Akinator/html/index.html
+++ b/Pepper-Akinator/html/index.html
@@ -6,9 +6,11 @@
 
 </HEAD>
 
-<BODY BGCOLOR="FFFFFF">
+<BODY BGCOLOR="71B5F1">
 
-<H1>DEFAULT_VALUE</H1>
+<div style = "position:relative; left:80px; top:2px; margin-top:200px;font-size:50">
+         <center><H1>  <span id="typed"> </span> </center/H1>
+      </div>
 
 </BODY>
 
