This was the final test

--- a/Pepper-Akinator/html/index.html
+++ b/Pepper-Akinator/html/index.html
@@ -1,7 +1,9 @@
 <HTML>
 
 <HEAD>
-
+<script src=”/libs/qimessaging/2/qimessaging.js”></script>
+<script src=”typed.min.js”></script>
+<script src=”script.js”></script>
 <TITLE>Your Title Here</TITLE>
 
 </HEAD>
